--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-Write some real documentation
-
-Implement a shell like GRUB has?
+- Write some real documentation
+- Implement a shell like GRUB has?
