--- a/TODO
+++ b/TODO
@@ -1,6 +1,15 @@
-- Implement a shell like GRUB has?
-- Support for reopening the menu?
-- Load config file from /dev/hdx?
-- Write script to create floppy images?
-- Create patch to allow kexec binary to be included as part of kexec-loader?
-- Write script to download and build kexec-tools?
+version 1.2:
+	Write script to create floppy images
+	
+	Create patch to allow /sbin/kexec to be included in the kexec-loader
+	program (Maybe busybox style?)
+	
+	Write script to download, patch and merge kexec-tools with the
+	kexec-loader sources.
+
+Maybe:
+	Implement a shell like GRUB has?
+	
+	Support for reopening the menu?
+	
+	Load config file from /dev/hdx?
