--- a/TODO
+++ b/TODO
@@ -1,7 +1,11 @@
-version 1.2:
+Version 1.2:
 	Write script to create floppy images
 
-Maybe:
-	Implement a shell like GRUB has?
+Version 1.3:
+	Support reading GRUB configuration files.
+
+Future/maybe:
+	Console for configuring and booting targets on the fly, like GRUB?
 	
-	Support for reopening the menu?
+	Support for running kexec-loader at the end of a system reboot in
+	order to load a new kernel without rebooting the hardware?
