--- a/TODO
+++ b/TODO
@@ -6,3 +6,6 @@ Future/maybe:
 	
 	Support for running kexec-loader at the end of a system reboot in
 	order to load a new kernel without rebooting the hardware?
+	
+	Improve the kexec-tools merge patch to allow kexec to be run inside the
+	main process and to use the kexec-loader console I/O functions?
