Added latest stuff to ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 1.3:
+	Created mount_dev() function to cut down on duplicate mounting code.
+
 Version 1.2:
 	Rewrote fatal() function and removed pointless calls to it.
 	
