Moved maybe target to v1.4 in TODO

--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
+Version 1.4:
+	Support for running kexec-loader at the end of a system reboot in
+	order to load a new kernel without rebooting the hardware.
+
 Future/maybe:
 	Console for configuring and booting targets on the fly, like GRUB?
-	
-	Support for running kexec-loader at the end of a system reboot in
-	order to load a new kernel without rebooting the hardware?
 	
 	Improve the kexec-tools merge patch to allow kexec to be run inside the
 	main process and to use the kexec-loader console I/O functions?
