--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@ Version 1.3.1:
 	
 	Fixed bug: grub_loadcfg() now checks that grub_root is set before
 	attempting to mount it, how the hell did I overlook this?!
+	
+	Fixed bug: load_menu() now correctly handles the 'default' directive
+	in menu.lst.
 
 Version 1.3:
 	Created mount_dev() function to cut down on duplicate mounting code.
