--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
-Future/maybe:
-	Console for configuring and booting targets on the fly, like GRUB?
+Version 1.4:
+	Console for configuring and booting targets on the fly, like GRUB.
+	
+	Code cleanup
