--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,9 @@ Version 1.4:
 	
 	Added reset-vga directive/command which passes kexec the --reset-vga
 	argument when loading the kernel.
+	
+	Updated the kexec-tools merge patch to make die() output error messages
+	in the same style as kexec-loader.
 
 Version 1.3.1:
 	Updated makefile structure and added new targets.
