--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,9 @@ Version 1.4:
 	
 	Updated the kexec-tools merge patch to make die() output error messages
 	in the same style as kexec-loader.
+	
+	Implemented free_targets(), fixed a memory leak in config_load() and
+	used value2 in config_parse() to get rid of a warning.
 
 Version 1.3.1:
 	Updated makefile structure and added new targets.
