--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Version 1.4.1:
 	Better line editing and command history for shell.
+	
+	Support for autodetecting more filesystems, such as ISO9660 and UDF.
 
 Future/undecided:
 	Dynamic memory for strings other then input buffers? (Filenames, etc)
