Added command history to shell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.4.1:
+	Added command history, scrolls through previous commands on up/down
+	arrow keys, by default the history size is 32 commands.
+
 Version 1.4:
 	Added cmdline configuration directive.
 	
