--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+Version 1.4.3:
+	Fixed bug caused by my stupidity and lack of testing:
+		grub_loadcfg() incorrectly checked that grub_root was set, why
+		does this seem so familiar? Oh yeah! Version 1.3.1!
+
+Version 1.4.2:
+	Replaced malloc() calls with allocate() calls for simplicity.
+	
+	Replaced most fixed-length strings with dynamic strings in order to
+	save memory.
+	
+	Replaced kl_target.modules array with a linked-list to remove the limit
+	on multiboot modules.
+	
+	Added multiboot module support for GRUB configuration files.
+
 Version 1.4.1:
 	Added support for ISO-9660 to detect_fstype().
 	
