--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 1.6.1:
+	Fixed a bug: config_parse() silently ignored initrd due to a typo.
+
 Version 1.6:
 	Replaced unsafe mmap() code in detect_fstype() which crashed on small
 	partitions, such as MS-DOS extended.
