--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Version 1.6.1:
 	Fixed a bug: config_parse() silently ignored initrd due to a typo.
+	
+	Added reboot and halt commands to shell.
 
 Version 1.6:
 	Replaced unsafe mmap() code in detect_fstype() which crashed on small
