--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Version 1.6.1:
 	Fixed a bug: config_parse() silently ignored initrd due to a typo.
 	
 	Added reboot, halt and cat commands to shell.
+	
+	Implemented autocompletion for commands and filenames in the shell.
 
 Version 1.6:
 	Replaced unsafe mmap() code in detect_fstype() which crashed on small
