--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.6.2:
+	Fixed a bug: specifying filesystem type AND /dev/ for a non-existant
+	device no longer attempts to free an invalid address.
+
 Version 1.6.1:
 	Fixed a bug: config_parse() silently ignored initrd due to a typo.
 	
