--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@ Version 1.6.2:
 	Updated the shell to accept arguments containing spaces without them
 	being quoted or escaped for the kernel, initrd, cmdline and append
 	commands.
+	
+	Updated detect_fstype() and check_magic() to correctly identify ext4
+	filesystems instead of identifying them as ext3.
 
 Version 1.6.1:
 	Fixed a bug: config_parse() silently ignored initrd due to a typo.
