--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.1.1:
+	Updated config loading code to look for kxloader.cfg if there is no
+	kexec-loader.conf file.
+
 Version 2.1:
 	Fixed a bug: grub-map caused an "Unknown directive" error.
 	
