Fixed bug: Append option ignored and cmdline used in its place.

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ Version 2.1.1:
 	Fixed bug: Module loading failed due to my lack of testing.
 	
 	Changed ls command to not output timestamps or list ./.. directories.
+	
+	Fixed bug: Append option ignored and cmdline used in its place.
 
 Version 2.1:
 	Fixed a bug: grub-map caused an "Unknown directive" error.
