--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 2.2.3:
+	Bug fixes: Crashes caused by calling vfs_translate_path() with no disk
+	set or using 'find' with too few args.
+	
+	Updated filename autocompletion: partial names are appended where
+	possible and complete ones are displayed.
+
 Version 2.2.2:
 	Added chroot jail support to the VFS layer and a rootdir kernel argument
 	to override the root directory path on the boot disk.
@@ -6,9 +13,6 @@ Version 2.2.2:
 	make debugging crashes less insanity-inducing.
 	
 	Added GRUB autodetection support.
-	
-	Updated filename autocompletion: partial names are appended where
-	possible and complete ones are displayed.
 
 Version 2.2.1:
 	Lots of code cleanup.
